// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adding than part 1`] = `
<em>
  This is better
   
  … než 
  <React.Fragment>
    
    <Link
      to="/themes/1/everything"
    >
      everything
    </Link>
  </React.Fragment>
</em>
`;

exports[`adding than part 2`] = `
<em>
  This is better
   
  … než 
  <React.Fragment>
    
    <Link
      to="/themes/1/everything"
    >
      everything
    </Link>
  </React.Fragment>
  <React.Fragment>
    , 
    <Link
      to="/themes/2/else"
    >
      else
    </Link>
  </React.Fragment>
</em>
`;

exports[`replacing by positions 1`] = `
Array [
  "",
  <Link
    to="/themes/1/php"
  >
    PHP
  </Link>,
  " is ",
  <Link
    to="/themes/2/acronym"
  >
    acronym
  </Link>,
  "",
]
`;

exports[`text as nothing to replae 1`] = `
Array [
  "PHP is acronym",
]
`;

exports[`without than part for empty 1`] = `"This good enough"`;
